# film-search-engine

./: .gitignore  AI Test Task.docx  IMPLEMENTATION_PLAN.md  README.md  api.py  pyproject.toml  requirements.txt  streamlit_app.py
sales/: Questionnaires.docx  Questionnaries.docx
scripts/: build_index.py
src/: __init__.py  data_loader.py  embeddings.py  models.py  query_parser.py  ranking.py  search_engine.py  vector_store.py
tests/: test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase5_query_parser.py  test_query_parser.py
